--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
+<script src="https://unpkg.com/aframe-text-component@^0.4.1/dist/aframe-text-component.min.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs>
+    <a-assets>
+        <a-asset-item id="optimerBoldFont" src="https://rawgit.com/mrdoob/three.js/dev/examples/fonts/optimer_bold.typeface.json"></a-asset-item>
+    </a-assets>
     <a-marker preset="hiro">
-        <a-box position='0 0.5 0' material='color: yellow;'></a-box>
+        <a-entity text="text: Любые наушники на выбор"></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
 </a-scene>
