--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
-<script src="https://unpkg.com/aframe-text-component@^0.4.1/dist/aframe-text-component.min.js"></script>
+<!--<script src="https://unpkg.com/aframe-text-component@^0.4.1/dist/aframe-text-component.min.js"></script>-->
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs>
     <a-assets>
