--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
 <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
-<!--<script src="https://unpkg.com/aframe-text-component@^0.4.1/dist/aframe-text-component.min.js"></script>-->
+<script src="https://unpkg.com/aframe-text-component@^0.4.1/dist/aframe-text-component.min.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
-<a-scene embedded arjs>
+<a-scene>
     <a-assets>
         <a-asset-item id="optimerBoldFont" src="https://rawgit.com/mrdoob/three.js/dev/examples/fonts/optimer_bold.typeface.json"></a-asset-item>
+        <a-mixin id="boldFont" text="font: #optimerBoldFont"></a-mixin>
     </a-assets>
-    <a-marker preset="hiro">
-        <a-entity text="text: Любые наушники на выбор"></a-entity>
-    </a-marker>
-    <a-entity camera></a-entity>
+
+    <a-entity mixin="boldFont" text="text: What's up"></a-entity>
+    <a-entity text="text: Dog?; font: #optimerBoldFont"></a-entity>
 </a-scene>
 </body>
 </html>
