--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-<!doctype HTML>
-<html>
-<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
-<script src="https://unpkg.com/aframe-text-component@^0.4.1/dist/aframe-text-component.min.js"></script>
-<body style='margin : 0px; overflow: hidden;'>
+<head>
+    <title>My A-Frame Scene</title>
+    <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-text-geometry-component@0.5.1/dist/aframe-text-geometry-component.min.js"></script>
+</head>
+
+<body>
 <a-scene>
     <a-assets>
         <a-asset-item id="optimerBoldFont" src="https://rawgit.com/mrdoob/three.js/dev/examples/fonts/optimer_bold.typeface.json"></a-asset-item>
-        <a-mixin id="boldFont" text="font: #optimerBoldFont"></a-mixin>
     </a-assets>
 
-    <a-entity mixin="boldFont" text="text: What's up"></a-entity>
-    <a-entity text="text: Dog?; font: #optimerBoldFont"></a-entity>
+    <a-entity text-geometry="value: What's up"></a-entity>
+    <a-entity text-geometry="value: Dog?; font: #optimerBoldFont"></a-entity>
 </a-scene>
 </body>
-</html>
