--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
-<html>
 <head>
     <title>My A-Frame Scene</title>
-    <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-text-geometry-component/dist/aframe-text-geometry-component.min.js"></script>
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="./main.js"></script>
 </head>
+
 <body>
 <a-scene>
     <a-assets>
         <a-asset-item id="optimerBoldFont" src="https://rawgit.com/mrdoob/three.js/dev/examples/fonts/optimer_bold.typeface.json"></a-asset-item>
-        <a-mixin id="boldFont" text="font: #optimerBoldFont"></a-mixin>
     </a-assets>
-
-    <a-entity mixin="boldFont" text-geometry="value: What's up"></a-entity>
+    <a-text value="Hello, World!" font="#optimerBoldFont"></a-text>
     <a-entity text-geometry="value: Dog?; font: #optimerBoldFont"></a-entity>
 </a-scene>
 </body>
-</html>
