--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <head>
     <title>My A-Frame Scene</title>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"></script>
+    <script src="./components/text-geometry.js"></script>
     <script src="./main.js"></script>
 </head>
 
 <body>
-<a-scene>
+<a-scene debug="false">
     <a-assets>
-        <a-asset-item id="optimerBoldFont" src="https://rawgit.com/mrdoob/three.js/dev/examples/fonts/optimer_bold.typeface.json"></a-asset-item>
+        <a-asset-item id="optimerBoldFont" src="./fonts/helvetiker_regular.typeface.json">
     </a-assets>
-    <a-text value="Hello, World!" font="#optimerBoldFont"></a-text>
-    <a-entity text-geometry="value: Dog?; font: #optimerBoldFont"></a-entity>
+    <a-entity
+            position="-2.5 2.4 -6"
+            text-geometry="value: Happy; size: 1.5; font: #optimerBoldFont; weight: bold;"
+    ></a-entity>
+    <a-entity
+            position="-3.3 0.3 -6"
+            text-geometry="value: birthday; size: 1.5; font: #optimerBoldFont; weight: bold;"
+    ></a-entity>
 </a-scene>
 </body>
