--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
 </head>
 
 <body>
-<a-scene debug="false">
+<a-scene embedded arjs>
     <a-assets>
         <a-asset-item id="optimerBoldFont" src="./fonts/helvetiker_regular.typeface.json">
     </a-assets>
-    <a-entity
-            position="-2.5 2.4 -6"
-            text-geometry="value: Happy; size: 1.5; font: #optimerBoldFont; weight: bold;"
-    ></a-entity>
-    <a-entity
-            position="-3.3 0.3 -6"
-            text-geometry="value: birthday; size: 1.5; font: #optimerBoldFont; weight: bold;"
-    ></a-entity>
+    <a-marker preset="hiro">
+        <a-entity
+                position="-2.5 2.4 -6"
+                text-geometry="value: Happy; size: 1.5; font: #optimerBoldFont; weight: bold;"
+        ></a-entity>
+        <a-entity
+                position="-3.3 0.3 -6"
+                text-geometry="value: birthday; size: 1.5; font: #optimerBoldFont; weight: bold;"
+        ></a-entity>
+    </a-marker>
+    <a-entity camera></a-entity>
 </a-scene>
 </body>
