--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <title>My A-Frame Scene</title>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
 <!--    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"></script>-->
     <script src="./components/text-geometry.js"></script>
     <script src="./main.js"></script>
