--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <title>My A-Frame Scene</title>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
-<!--    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"></script>
     <script src="./components/text-geometry.js"></script>
     <script src="./main.js"></script>
 </head>
@@ -14,14 +14,24 @@
     </a-assets>
     <a-marker preset="hiro">
         <a-entity
-                position="-2.5 2.4 -6"
-                text-geometry="value: Happy; size: 1.5; font: #optimerBoldFont; weight: bold;"
+                position="-0.95 1.13 0.2"
+                text-geometry="value: Happy; size: 0.5; font: #optimerBoldFont; weight: bold;"
         ></a-entity>
         <a-entity
-                position="-3.3 0.3 -6"
-                text-geometry="value: birthday; size: 1.5; font: #optimerBoldFont; weight: bold;"
+                position="-1.1 0.3 0.2"
+                text-geometry="value: birthday; size: 0.5; font: #optimerBoldFont; weight: bold;"
         ></a-entity>
+        <a-entity camera></a-entity>
     </a-marker>
-    <a-entity camera></a-entity>
+<!--    <a-box position='0 0.5 0' material='color: yellow;'></a-box>-->
+<!--    <a-entity-->
+<!--            position="-0.95 1.13 0.2"-->
+<!--            text-geometry="value: Happy; size: 0.5; font: #optimerBoldFont; weight: bold;"-->
+<!--    ></a-entity>-->
+<!--    <a-entity-->
+<!--            position="-1.1 0.3 0.2"-->
+<!--            text-geometry="value: birthday; size: 0.5; font: #optimerBoldFont; weight: bold;"-->
+<!--    ></a-entity>-->
+<!--    <a-entity camera></a-entity>-->
 </a-scene>
 </body>
