--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
         <a-asset-item id="optimerBoldFont" src="./fonts/helvetiker_regular.typeface.json">
     </a-assets>
     <a-marker preset="hiro">
-        <a-entity
-                position="-0.95 1.13 0.2"
-                text-geometry="value: Happy; size: 0.5; font: #optimerBoldFont; weight: bold;"
-        ></a-entity>
-        <a-entity
-                position="-1.1 0.3 0.2"
-                text-geometry="value: birthday; size: 0.5; font: #optimerBoldFont; weight: bold;"
-        ></a-entity>
+<!--        <a-entity-->
+<!--                position="-0.95 1.13 0.2"-->
+<!--                text-geometry="value: Happy; size: 0.5; font: #optimerBoldFont; weight: bold;"-->
+<!--        ></a-entity>-->
+<!--        <a-entity-->
+<!--                position="-1.1 0.3 0.2"-->
+<!--                text-geometry="value: birthday; size: 0.5; font: #optimerBoldFont; weight: bold;"-->
+<!--        ></a-entity>-->
+        <a-box position='0 0.5 0' material='color: yellow;'></a-box>-->
         <a-entity camera></a-entity>
     </a-marker>
 <!--    <a-box position='0 0.5 0' material='color: yellow;'></a-box>-->
