--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <a-entity position="0.88814 0.44 0.32985" rotation="-89.99963750135457 14.047206263222392 0" material="color: #170c07; emissive: #fe9111" text-geometry="value: Y; size: 0.3; font: #optimerBoldFont; weight: bold"></a-entity>
 
         <!-- /text -->
-        <a-plane rotation="-90 0 0" material="color: #36006f" width="10" height="10" sound="src: url(./assets/happy-birthday.wav); autoplay: false; loop: true;"></a-plane>
+        <a-plane rotation="-90 0 0" material="color: #36006f" width="10" height="10" sound="src: url(./assets/happy-birthday.wav); autoplay: true; loop: true;"></a-plane>
 
 
     </a-marker>
