--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
     <title>My A-Frame Scene</title>
     <script src="./library/aframe.min.js"></script>
     <!--    AR-->
-    <script src="./library/aframe-ar.js"></script>
+<!--    <script src="./library/aframe-ar.js"></script>-->
     <script src="./library/aframe-particleplayer-component.min.js"></script>
     <!--    Inspectir-->
-<!--    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"></script>
     <script src="./components/text-geometry.js"></script>
     <script src="./main.js"></script>
 </head>
@@ -23,7 +23,7 @@
         <a-asset-item id="optimerBoldFont" src="./fonts/Celebrater_Regular.json">
     </a-assets>
 
-    <a-marker preset="hiro">
+    <a-marker preset="hiro" id="hb-marker">
 
 
         <a-entity position="0 0 0"
@@ -55,7 +55,7 @@
         <a-entity position="0.88814 0.44 0.32985" rotation="-89.99963750135457 14.047206263222392 0" material="color: #170c07; emissive: #fe9111" text-geometry="value: Y; size: 0.3; font: #optimerBoldFont; weight: bold"></a-entity>
 
         <!-- /text -->
-        <a-plane rotation="-90 0 0" material="color: #36006f" width="10" height="10" sound="src: url(./assets/happy-birthday.wav); autoplay: true; loop: true;"></a-plane>
+        <a-plane rotation="-90 0 0" material="color: #36006f" width="10" height="10"></a-plane>
 
 
     </a-marker>
