--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
     <title>My A-Frame Scene</title>
     <script src="./library/aframe.min.js"></script>
     <!--    AR-->
-<!--    <script src="./library/aframe-ar.js"></script>-->
+    <script src="./library/aframe-ar.js"></script>
     <script src="./library/aframe-particleplayer-component.min.js"></script>
     <!--    Inspectir-->
-    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"></script>
+<!--    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"></script>-->
     <script src="./components/text-geometry.js"></script>
     <script src="./main.js"></script>
 </head>
