--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a-asset-item id="optimerBoldFont" src="./fonts/Celebrater_Regular.json">
     </a-assets>
 
-    <a-marker preset="hiro" id="hb-marker">
+    <a-marker preset="hiro" id="hb-marker" markerhandler emitevents="true">
 
 
         <a-entity position="0 0 0"
