--- a/view.html
+++ b/view.html
@@ -5,7 +5,7 @@
     <!--    AR-->
     <!--    <script src="./library/aframe-ar.js"></script>-->
     <!--    Inspectir-->
-    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"></script>
+<!--    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe-inspector@master/dist/aframe-inspector.min.js"></script>-->
     <script src="./components/text-geometry.js"></script>
     <script src="./main.js"></script>
 </head>
