--- a/view.html
+++ b/view.html
@@ -1,5 +1,6 @@
 <head>
-    <title>My A-Frame Scene</title>
+    <title>Happy birthday</title>
+    <link rel="HP" href="./assets/favicon.ico" />
     <script src="./library/aframe.min.js"></script>
     <script src="./library/aframe-particleplayer-component.min.js"></script>
     <!--    AR-->
