--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a-asset-item id="boxGreen" src="./assets/box-green.glb">
     </a-assets>
 
-    <a-marker preset="hiro" id="hb-marker" markerhandler emitevents="true">
+    <a-marker type='barcode' value='24' id="hb-marker" markerhandler emitevents="true">
 
 
         <a-entity position="0.2 -0.2 0"
