add support safari

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="./main.js"></script>
 </head>
 
-<body>
+<body onclick="playSafari()">
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 <!--    embedded arjs-->
     <a-assets>
